--- a/script.html
+++ b/script.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        document.write("welcome1 <br>");
+        document.write("This is my first javascript.<br>");
+    </script>
+    <script src="script.js"></script>
 </head>
 <body>
-    
+    <script>
+        document.write("welcome2 <br>");
+        document.write("This is my first javascript.<br>");
+    </script>
+    <script src="script.js"></script>
 </body>
 </html>
