--- a/script.html
+++ b/script.html
@@ -13,9 +13,11 @@
 </head>
 <body>
     <script>
-        document.write("welcome2 <br>");
+        document.write("welcome2 <br>");//This is a single line comment
         document.write("This is my first javascript.<br>");
     </script>
     <script src="script.js"></script>
+    /*This is a multiple 
+    line comment*/
 </body>
 </html>
