--- a/02operators.html
+++ b/02operators.html
@@ -1,61 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible"
-              content="IE=edge">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
+  <body>
+    <script>
+      //Arithmetic Operations
+      a = 4;
+      b = 3;
+      document.write(a + b + "<br>");
+      document.write(a - b + "<br>");
+      document.write(a * b + "<br>");
+      document.write(a / b + "<br>");
+      document.write((a % b) + "<br>");
+      document.write(++a + "<br>"); //pre increment
+      document.write(a++ + "<br>"); //post increment
+      document.write(a + "<br>");
+      document.write(--a + "<br>"); //pre decrement
+      document.write(a-- + "<br>"); //post decrement
+      document.write(a + "<br><br>");
+      //Assignment operators
+      x = 5;
+      y = 4;
+      x = y;
+      document.write(x + "<br>"); //Same as x = y
+      x += y;
+      document.write(x + "<br>"); // Same as x = x + y
+      x -= y;
+      document.write(x + "<br>"); // Same as x = x - y
+      x *= y;
+      document.write(x + "<br>"); // Same as x = x * y
+      x /= y;
+      document.write(x + "<br>"); // Same as x = x / y
+      x %= y;
+      document.write(x + "<br>"); // Same as x = x % y
+      // x <<= y;
+      // document.write(x + "<br>");// Same as x = x << y
+      // x >>= y;
+      // document.write(x + "<br>");// Same as x = x >> y
+      // x >>>= y;
+      // document.write(x + "<br>");// Same as x = x >>> y
+      // x &= y;
+      // document.write(x + "<br>");// Same as x = x & y
+      x ^= y;
+      document.write(x + "<br>"); // Same as x = x ^ y
+      x |= y;
+      document.write(x + "<br>"); // Same as x = x | y
+      x **= y;
+      document.write(x + "<br>"); // Same as x = x ** y
+      //Comparison Operator
+      p = 5;
+      document.write(p == 2);
+      document.write("<br>");
 
-    <body>
-        <script>
-            //Arithmetic Operations
-            a = 4;
-            b = 3;
-            document.write(a + b + "<br>");
-            document.write(a - b + "<br>");
-            document.write(a * b + "<br>");
-            document.write(a / b + "<br>");
-            document.write(a % b + "<br>");
-            document.write(++a + "<br>");//pre increment
-            document.write(a++ + "<br>");//post increment
-            document.write(a + "<br>");
-            document.write(--a + "<br>");//pre decrement
-            document.write(a-- + "<br>");//post decrement
-            document.write(a + "<br><br>");
-            //Assignment operators
-            x = 5;
-            y = 4;
-            x = y;
-            document.write(x + "<br>");//Same as x = y
-            x += y;
-            document.write(x + "<br>");// Same as x = x + y
-            x -= y;
-            document.write(x + "<br>");// Same as x = x - y
-            x *= y;
-            document.write(x + "<br>");// Same as x = x * y
-            x /= y;
-            document.write(x + "<br>");// Same as x = x / y
-            x %= y;
-            document.write(x + "<br>");// Same as x = x % y
-            // x <<= y;
-            // document.write(x + "<br>");// Same as x = x << y
-            // x >>= y;
-            // document.write(x + "<br>");// Same as x = x >> y
-            // x >>>= y;
-            // document.write(x + "<br>");// Same as x = x >>> y
-            // x &= y;
-            // document.write(x + "<br>");// Same as x = x & y
-            x ^= y;
-            document.write(x + "<br>");// Same as x = x ^ y
-            x |= y;
-            document.write(x + "<br>");// Same as x = x | y
-            x **= y;
-            document.write(x + "<br>");// Same as x = x ** y
-        </script>
-    </body>
+      document.write(p == 5);
+      document.write("<br>");
 
+      document.write(p == "5");
+      document.write("<br>");
+
+      document.write(p === "5");
+      document.write("<br>");
+
+      document.write(p != 5);
+      document.write("<br>");
+
+      document.write(p != 3);
+      document.write("<br>");
+    </script>
+  </body>
 </html>
