--- a/02operators.html
+++ b/02operators.html
@@ -71,6 +71,42 @@
 
       document.write(p != 3);
       document.write("<br>");
+
+      document.write(p !== 5);
+      document.write("<br>");
+
+      document.write(p !== "5");
+      document.write("<br>");
+
+      document.write(p !== 7);
+      document.write("<br>");
+
+      document.write(p < 8);
+      document.write("<br>");
+
+      document.write(p > 8);
+      document.write("<br>");
+
+      document.write(p <= 8);
+      document.write("<br>");
+
+      document.write(p >= 8);
+      document.write("<br>");
+
+      document.write(p = 5 && p < 8);
+      document.write("<br>");
+
+      document.write(p = 5 && p < 1);
+      document.write("<br>");
+
+      document.write(p = 5 || p < 8);
+      document.write("<br>");
+
+      document.write(p = 5 || p < 8);
+      document.write("<br>");
+
+      document.write!(p < 8);
+      document.write("<br>");
     </script>
   </body>
 </html>
