--- a/02operators.html
+++ b/02operators.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=edge" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
@@ -30,7 +27,7 @@
       document.write(a / b + "<br>");
 
       document.write("a % b =");
-      document.write(a % b + "<br>");
+      document.write((a % b) + "<br>");
 
       document.write("++a =");
       document.write(++a + "<br>"); //pre increment
@@ -53,43 +50,57 @@
       document.write("x=5;<br>y=4;<br>");
 
       x = y;
-      document.write("x =");
-      document.write(x + "<br>"); //Same as x = y
+      document.write("x =y =");
+      document.write(x + " Same as x = y<br>"); //Same as x = y
 
       x += y;
-      document.write("x =");
-      document.write(x + "<br>"); // Same as x = x + y
+      document.write("x +=y=");
+      document.write(x + " same as x= x+y<br>"); // Same as x = x + y
 
       x -= y;
-      document.write("x =");
-      document.write(x + "<br>"); // Same as x = x - y
+      document.write("x -=y=");
+      document.write(x + " Same as x = x - y<br>"); // Same as x = x - y
 
       x *= y;
-      document.write("x =");
-      document.write(x + "<br>"); // Same as x = x * y
+      document.write("x *=y=");
+      document.write(x + " Same as x = x * y<br>"); // Same as x = x * y
 
       x /= y;
-      document.write("x =");
-      document.write(x + "<br>"); // Same as x = x / y
+      document.write("x /= y=");
+      document.write(x + " Same as x = x / y<br>"); // Same as x = x / y
 
       x %= y;
-      document.write("x =");
-      document.write(x + "<br>"); // Same as x = x % y
+      document.write("x %= y =");
+      document.write(x + " Same as x = x % y<br>"); // Same as x = x % y
 
       x <<= y;
-      document.write(x + "<br>");// Same as x = x << y
+      document.write("x <<= y =");
+      document.write(x + " Same as x = x << y<br>"); // Same as x = x << y
+
       x >>= y;
-      document.write(x + "<br>");// Same as x = x >> y
+      document.write("x >>= y=");
+      document.write(x + " Same as x = x >> y<br>"); // Same as x = x >> y
+
       x >>>= y;
-      document.write(x + "<br>");// Same as x = x >>> y
+      document.write("x >>>= y =");
+      document.write(x + " Same as x = x >>> y<br>"); // Same as x = x >>> y
+
       x &= y;
-      document.write(x + "<br>");// Same as x = x & y
+      document.write("x &= y =");
+      document.write(x + " Same as x = x & y<br>"); // Same as x = x & y
+
       x ^= y;
-      document.write(x + "<br>"); // Same as x = x ^ y
+      document.write("x ^= y =");
+      document.write(x + " Same as x = x ^ y<br>"); // Same as x = x ^ y
+
       x |= y;
-      document.write(x + "<br>"); // Same as x = x | y
+      document.write("x |= y =");
+      document.write(x + " Same as x = x | y<br>"); // Same as x = x | y
+
       x **= y;
-      document.write(x + "<br>"); // Same as x = x ** y
+      document.write("x **= y =");
+      document.write(x + " Same as x = x ** y<br><br>"); // Same as x = x ** y
+
       //Comparison Operator
       p = 5;
       document.write(p == 2);
@@ -131,10 +142,10 @@
       document.write(p >= 8);
       document.write("<br>");
 
-      document.write(p = 5 && p < 8);
+      document.write((p = 5 && p < 8));
       document.write("<br>");
 
-      document.write(p = 5 && p < 1);
+      document.write((p = 5 && p < 1));
       document.write("<br>");
 
       document.write(p == 5 || p < 8);
@@ -147,5 +158,4 @@
       document.write("<br>");
     </script>
   </body>
-
 </html>
