--- a/01variable&datatype.html
+++ b/01variable&datatype.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible"
-              content="IE=edge">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-
-    <body>
-        <script>
-            var x = 1;
-            let y = 2;
-            const z = 3;
-            a = 4;
-            document.write(x + "<br>");
-            document.write(y + "<br>");
-            document.write(z + "<br>");
-            document.write(a + "<br>");
-            document.write(b + "<br>");
-            c = a + b;
-            document.write(c + "<br>");
-            //data type
-            var d = 9;//integar
-            document.write(typeof d + "<br>");
-            var e = 2.3;//float
-            document.write(typeof e + "<br>");
-            var f = "This is a string";//string
-            document.write(typeof f + "<br>");
-            var g = true;//also false
-            document.write(typeof g + "<br>");
-            var h = null;//null
-            document.write(typeof h + "<br>");
-            var b;//undefined
-            document.write(b + "<br>");
-            b = 6;
-        </script>
-    </body>
-
+  <body>
+    <script>
+      var x = 1;
+      let y = 2;
+      const z = 3;
+      a = 4;
+      document.write(x + "<br>");
+      document.write(y + "<br>");
+      document.write(z + "<br>");
+      document.write(a + "<br>");
+      document.write(b + "<br>");
+      c = a + b;
+      document.write(c + "<br>");
+      //data type
+      var d = 9; //integar
+      document.write(typeof d + "<br>");
+      var e = 2.3; //float
+      document.write(typeof e + "<br>");
+      var f = "This is a string"; //string
+      document.write(typeof f + "<br>");
+      var g = true; //also false
+      document.write(typeof g + "<br>");
+      var h = null; //null
+      document.write(typeof h + "<br>");
+      var b; //undefined
+      document.write(b + "<br>");
+      b = 6;
+      let i, j, k;
+      i = 1;
+      j = 3;
+      k = 4;
+    </script>
+  </body>
 </html>
