--- a/02operators.html
+++ b/02operators.html
@@ -45,7 +45,7 @@
       document.write("a =");
       document.write(a + "<br><br>");
       //Assignment operators
-      x = 2;
+      x = 5;
       y = 4;
       document.write("x=5;<br>y=4;<br>");
 
@@ -103,57 +103,75 @@
 
       //Comparison Operator
       p = 5;
+      document.write("p == 2=");
       document.write(p == 2);
       document.write("<br>");
 
+      document.write("p == 5=");
       document.write(p == 5);
       document.write("<br>");
 
+      document.write('p == "5"=');
       document.write(p == "5");
       document.write("<br>");
 
+      document.write('p === "5"=');
       document.write(p === "5");
       document.write("<br>");
 
+      document.write("p != 5=");
       document.write(p != 5);
       document.write("<br>");
 
+      document.write("p != 3=");
       document.write(p != 3);
       document.write("<br>");
 
+      document.write("p !== 5=");
       document.write(p !== 5);
       document.write("<br>");
 
+      document.write('p !== "5"=');
       document.write(p !== "5");
       document.write("<br>");
 
+      document.write("p !== 7=");
       document.write(p !== 7);
       document.write("<br>");
 
+      document.write("p < 8=");
       document.write(p < 8);
       document.write("<br>");
 
+      document.write("p > 8=");
       document.write(p > 8);
       document.write("<br>");
 
+      document.write("p <= 8=");
       document.write(p <= 8);
       document.write("<br>");
 
+      document.write("p >= 8=");
       document.write(p >= 8);
       document.write("<br>");
 
+      document.write("p = 5 && p < 8=");
       document.write((p = 5 && p < 8));
       document.write("<br>");
 
+      document.write("p = 5 && p < 1=");
       document.write((p = 5 && p < 1));
       document.write("<br>");
 
+      document.write("p == 5 || p < 8=");
       document.write(p == 5 || p < 8);
       document.write("<br>");
 
+      document.write("p == 5 || p < 3=");
       document.write(p == 5 || p < 3);
       document.write("<br>");
 
+      document.write("!(p < 5)=");
       document.write(!(p < 5));
       document.write("<br>");
     </script>
