--- a/03array&object.html
+++ b/03array&object.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <script>
       var h = "Ariful";
@@ -21,13 +25,21 @@
       name5[0] = "Ariful";
       name5[1] = "Kamal";
       name5[2] = "Tamim";
+
       document.write(name4[1] + "<br>");
+
       document.write(name4.length + "<br>");
-      let name = name4[0];
+
+      let name = name4 [0];
       document.write(name + "<br>");
+
+      document.write(name4 + "<br>");
+
       //Object
       const person = { firstName: "Ariful", lastName: "Islam", age: 46 };
       document.write(person.firstName);
+
     </script>
   </body>
+
 </html>
