--- a/02operators.html
+++ b/02operators.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
   <body>
     <script>
       //Arithmetic Operations
+      document.write("Arithmetic Operations<br>");
       a = 4;
       b = 3;
       document.write("a=4;<br>b=3;<br>");
@@ -27,8 +31,8 @@
       document.write(a / b + "<br>");
 
       document.write("a % b =");
-      document.write((a % b) + "<br>");
-      //
+      document.write((a % b) + "<br><br>");
+      //increament and decrement
       document.write("++a =");
       document.write(++a + "<br>"); //pre increment
       document.write("a++ =");
@@ -45,13 +49,14 @@
       document.write("a =");
       document.write(a + "<br><br>");
       //Assignment operators
+      document.write("Assignment operators<br>");
       x = 1;
       y = 2;
       document.write("x=5;<br>y=4;<br>");
 
-      // x = y;
-      // document.write("x =y =");
-      // document.write(x + " Same as x = y<br>"); //Same as x = y
+      x = y;
+      document.write("x =y =");
+      document.write(x + " Same as x = y<br>"); //Same as x = y
 
       x += y;
       document.write("x +=y=");
@@ -86,6 +91,7 @@
       document.write(x + " Same as x = x ** y<br><br>"); // Same as x = x ** y
 
       //Comparison Operator
+      document.write("Comparison operator<br>");
       m = 5;
       document.write("m == 2=");
       document.write(m == 2);
@@ -140,6 +146,7 @@
       document.write("<br><br>");
 
       //Logical Operator
+      document.write("Logical operator<br>");
       n = 5;
       document.write("n = 5 && n < 8=");
       document.write((n = 5 && n < 8));
@@ -159,9 +166,10 @@
 
       document.write("!(n < 5)=");
       document.write(!(n < 5));
-      document.write("<br>");
+      document.write("<br><br>");
 
       //Ternary Operator
+      document.write("Ternary operator<br>");
       var p = 10,
         q = 5;
 
@@ -174,4 +182,5 @@
       document.write(s);
     </script>
   </body>
+
 </html>
