--- a/05function.html
+++ b/05function.html
@@ -6,5 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script>
+      function name(x1, x2) {
+        return x1 * x2;
+      }
+      document.write(name(2, 3));
+      // short form
+      let p = myFunction(4, 3);
+      function myFunction(a, b) {
+        return a * b;
+      }
+      document.write(p);
+    </script>
+  </body>
 </html>
