--- a/06dom.html
+++ b/06dom.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
 
-    <p id="demo">ffg</p>
+    <p id="demo"></p>
+    <h1></h1>
     <script>
       // Method //getElimentByTagName(TagName) //getElimentByClassName(ClassName)
       //getElimentById(IdName)
@@ -17,6 +22,13 @@
       //document.getElimentById(IdName)
       document.getElementById("demo").innerHTML =
         "This is a html file oh! no javascript file";
+
+      var hi = document.getElementsByTagName('h1');
+      document.write(hi);
+      document.write(hi[1]);
+    
+        hi[1].textContent='This is a html file oh! no javascript file';
     </script>
   </body>
+
 </html>
