--- a/00getstarted.html
+++ b/00getstarted.html
@@ -16,6 +16,14 @@
     </head>
 
     <body>
+        <br>
+        <a href="00getstarted.html">00getstarted</a>
+        <a href="01variable&datatype.html">01variable</a>
+        <a href="02operators.html">02operators</a>
+        <a href="03array&object.html">03array&object</a>
+        <a href="04conditionals&loops.html">04conditionals</a>
+        <a href="05function.html">05function</a><br><br>
+
         <script>
             document.write("welcome2 <br>");//This is a single line comment
             document.write("This is my first javascript.<br>");
