--- a/01variable&datatype.html
+++ b/01variable&datatype.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
   <body>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable</a>
+    <a href="02operators.html">02operators</a>
+    <a href="03array&object.html">03array&object</a>
+    <a href="04conditionals&loops.html">04conditionals</a>
+    <a href="05function.html">05function</a><br><br>
     <script>
       var x = 1;
       let y = 2;
@@ -40,4 +49,5 @@
       k = 4;
     </script>
   </body>
+
 </html>
