--- a/02operators.html
+++ b/02operators.html
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable</a>
+    <a href="02operators.html">02operators</a>
+    <a href="03array&object.html">03array&object</a>
+    <a href="04conditionals&loops.html">04conditionals</a>
+    <a href="05function.html">05function</a><br><br>
     <script>
       //Arithmetic Operations
       document.write("Arithmetic Operations<br>");
