--- a/04conditionals&loops.html
+++ b/04conditionals&loops.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
   <body>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable</a>
+    <a href="02operators.html">02operators</a>
+    <a href="03array&object.html">03array&object</a>
+    <a href="04conditionals&loops.html">04conditionals</a>
+    <a href="05function.html">05function</a><br><br>
     <script>
       //if condition
       document.write("If condition<br>");
@@ -69,7 +78,7 @@
 
       document.write("<br>");
       let p = 1;
-      for (; p < 10; ) {
+      for (; p < 10;) {
         document.write(p + "<br>");
         p++;
       }
@@ -117,4 +126,5 @@
       document.write(sum);
     </script>
   </body>
+
 </html>
