--- a/03array&object.html
+++ b/03array&object.html
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable</a>
+    <a href="02operators.html">02operators</a>
+    <a href="03array&object.html">03array&object</a>
+    <a href="04conditionals&loops.html">04conditionals</a>
+    <a href="05function.html">05function</a><br><br>
     <script>
       var h = "Ariful";
       document.write(h + "<br>");
@@ -30,7 +36,7 @@
 
       document.write(name4.length + "<br>");
 
-      let name = name4 [0];
+      let name = name4[0];
       document.write(name + "<br>");
 
       document.write(name4 + "<br>");
