some file name change

--- a/06array.html
+++ b/06array.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=edge" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
   <body>
-    <a href="00getstarted.html">00getstarted</a>
-    <a href="01variable&datatype.html">01variable</a>
-    <a href="02operators.html">02operators</a>
-    <a href="03array&object.html">03array&object</a>
-    <a href="04conditionals&loops.html">04conditionals</a>
-    <a href="05function.html">05function</a><br><br>
+    <a href="01getstarted.html">01getstarted</a>
+    <a href="02datatype.html">02datatype</a>
+    <a href="03operators.html">03operators</a>
+    <a href="04conditionals&loops.html">04conditionals&loops</a>
+    <a href="05object.html">05object</a>
+    <a href="06array.html">06array</a>
+    <a href="07function.html">07function</a><br /><br />
     <script>
       var h = "Ariful";
       document.write(h + "<br>");
@@ -44,8 +42,6 @@
       //Object
       const person = { firstName: "Ariful", lastName: "Islam", age: 46 };
       document.write(person.firstName);
-
     </script>
   </body>
-
 </html>
