--- a/01getstarted.html
+++ b/01getstarted.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
   </head>
 
-  <body>
+  <body onload="alert('Hi');">
     <br />
     <a href="01getstarted.html">01getstarted</a>
     <a href="02datatype.html">02datatype</a>
@@ -23,11 +23,27 @@
     <a href="07function.html">07function</a><br /><br />
 
     <script>
+      document.write("welcome2 <br>");
+    </script>
+    <script src="script.js"></script>
+    <script>
       document.write("welcome2 <br>"); //This is a single line comment
       document.write("This is my first javascript.<br>");
       /*This is a multiple
                 line comment*/
+      console.log("This output is showing in consol");
+      //Variable
+      var x = 1; //Statment ,
+      let y = 2;
+      const z = 3;
+      a = 4;
+      document.write(x + "<br>");
+      document.write(y + "<br>");
+      document.write(z + "<br>");
+      document.write(a + "<br>");
+      document.write(b + "<br>");
+      c = a + b;
+      document.write(c + "<br>");
     </script>
-    <script src="script.js"></script>
   </body>
 </html>
