--- a/03variables&datatype.html
+++ b/03variables&datatype.html
@@ -16,17 +16,31 @@
     <a href="06array.html">06array</a>
     <a href="07function.html">07function</a><br /><br />
     <script>
-      var x = 1;
-      let y = 2;
-      const z = 3;
-      a = 4;
+      //Variable
+      var a;
+      a = 1;
+      var x = 2; //Statment ,
+      let y = 3;
+      const z = 4;
+
       document.write(x + "<br>");
       document.write(y + "<br>");
       document.write(z + "<br>");
       document.write(a + "<br>");
-      document.write(b + "<br>");
-      c = a + b;
+      c = a + x;
       document.write(c + "<br>");
+
+      h = 6;
+      let i, j, k;
+      i = 1;
+      j = 3;
+      k = 4;
+
+      let l = 3,
+        m = 4,
+        n = 5;
+
+      document.write(n);
       //data type
       var d = 9; //integar
       document.write(typeof d + "<br>");
@@ -36,15 +50,14 @@
       document.write(typeof f + "<br>");
       var g = true; //also false
       document.write(typeof g + "<br>");
-      var h = null; //null
-      document.write(typeof h + "<br>");
       var b; //undefined
       document.write(b + "<br>");
-      b = 6;
-      let i, j, k;
-      i = 1;
-      j = 3;
-      k = 4;
+
+      //Number
+
+      //string
+
+      //boolean
     </script>
   </body>
 </html>
