--- a/00getstarted.html
+++ b/00getstarted.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -32,7 +32,6 @@
       /*This is a multiple
                 line comment*/
       console.log("This output is showing in consol");
-      
     </script>
   </body>
 </html>
