--- a/01Class/06method&event.html
+++ b/01Class/06method&event.html
@@ -7,10 +7,19 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable&datatype</a>
+    <a href="02array&object.html">02array&object</a>
+    <a href="03operators.html">03operators</a>
+    <a href="04conditionals&loops.html">04conditionals&loops</a>
+    <a href="05function.html">05function</a>
+    <a href="06method&event.html">06method&event</a><br /><br />
+    
     <button onclick="document.getElementById('demo').innerHTML=Date()">
       The time is?
     </button>
 
     <p id="demo"></p>
+
   </body>
 </html>
