--- a/03Solve class/00getstarted.html
+++ b/03Solve class/00getstarted.html
@@ -14,13 +14,13 @@
 
   <body onload="alert('Hi');">
     <br />
-    <a href="01getstarted.html">01getstarted</a>
-    <a href="02datatype.html">02datatype</a>
-    <a href="03operators.html">03operators</a>
-    <a href="04conditionals&loops.html">04conditionals&loops</a>
-    <a href="05object.html">05object</a>
-    <a href="06array.html">06array</a>
-    <a href="07function.html">07function</a><br /><br />
+    <a href="00getstarted.html">01getstarted</a>
+    <a href="01variable&datatype.html">02datatype</a>
+    <a href="02array&object.html">03operators</a>
+    <a href="03operators.html">04conditionals&loops</a>
+    <a href="04conditionals&loops.html">05object</a>
+    <a href="05function.html">06array</a>
+    <a href="06method&event.html">07function</a><br /><br />
 
     <script>
       document.write("welcome2 <br>");
