--- a/01Class/03operators.html
+++ b/01Class/03operators.html
@@ -12,11 +12,12 @@
 
   <body>
     <a href="00getstarted.html">00getstarted</a>
-    <a href="01variable&datatype.html">01variable</a>
-    <a href="02operators.html">02operators</a>
-    <a href="03array&object.html">03array&object</a>
-    <a href="04conditionals&loops.html">04conditionals</a>
-    <a href="05function.html">05function</a><br><br>
+    <a href="01variable&datatype.html">01variable&datatype</a>
+    <a href="02array&object.html">02array&object</a>
+    <a href="03operators.html">03operators</a>
+    <a href="04conditionals&loops.html">04conditionals&loops</a>
+    <a href="05function.html">05function</a>
+    <a href="06method&event.html">06method&event</a><br /><br />
     <script>
       //Arithmetic Operations
       document.write("Arithmetic Operations<br>");
