--- a/01Class/05function.html
+++ b/01Class/05function.html
@@ -8,13 +8,13 @@
   </head>
 
   <body>
-    <a href="01getstarted.html">01getstarted</a>
-    <a href="02datatype.html">02datatype</a>
+    <a href="00getstarted.html">00getstarted</a>
+    <a href="01variable&datatype.html">01variable&datatype</a>
+    <a href="02array&object.html">02array&object</a>
     <a href="03operators.html">03operators</a>
     <a href="04conditionals&loops.html">04conditionals&loops</a>
-    <a href="05object.html">05object</a>
-    <a href="06array.html">06array</a>
-    <a href="07function.html">07function</a><br /><br />
+    <a href="05function.html">05function</a>
+    <a href="06method&event.html">06method&event</a><br /><br />
     <script>
       function name(x1, x2) {
         return x1 * x2;
