--- a/03Solve class/01variable&datatype.html
+++ b/03Solve class/01variable&datatype.html
@@ -11,12 +11,13 @@
   </head>
 
   <body>
-    <a href="00getstarted.html">00getstarted</a>
-    <a href="01variable&datatype.html">01variable</a>
-    <a href="02operators.html">02operators</a>
-    <a href="03array&object.html">03array&object</a>
-    <a href="04conditionals&loops.html">04conditionals</a>
-    <a href="05function.html">05function</a><br><br>
+    <a href="00getstarted.html">01getstarted</a>
+    <a href="01variable&datatype.html">02datatype</a>
+    <a href="02array&object.html">03operators</a>
+    <a href="03operators.html">04conditionals&loops</a>
+    <a href="04conditionals&loops.html">05object</a>
+    <a href="05function.html">06array</a>
+    <a href="06method&event.html">07function</a><br /><br />
     <script>
       var x = 1;
       let y = 2;
